--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>The Current - Accessible Civic Intelligence</title>
+
     <meta
       name="description"
       content="The Current is a hyper-local, accessible civic intelligence platform focused on de-mystifying the complex world of local government."
@@ -23,29 +24,12 @@
     <meta name="bingbot" content="index, follow" />
     <meta name="yandexbot" content="index, follow" />
     <meta name="sitemap" content="https://thecurrent.com/sitemap.xml" />
-
-    <!-- 1) Warm up connections -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-
-    <!-- 2) Load the stylesheet without blocking render -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="preload"
-      as="style"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
-    />
-    <link
+      href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
       rel="stylesheet"
-      media="print"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
-      onload="this.media='all'"
     />
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
-      />
-    </noscript>
   </head>
   <body class="bg-off-white text-dark-gray">
     <div
@@ -58,8 +42,8 @@
       </h1>
       <hr class="border-dark-gray border-b-2 w-24" />
       <p class="font-light font-sans text-2xl tracking-tight leading-normal">
-        Hyper-local, for everyone. <br /><strong class="font-[500]"
-          >In private beta.</strong
+        Hyper-local civic intelligence — for everyone.<br /><strong
+          class="font-[500]">In private beta.</strong
         >
       </p>
     </div>
